Fix text alignment syntax in CSS

--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@
 
 h1{
   color:red;
-  text align:center;
+  text-align:center;
 }
 td{
-  text align:center;
+  text-align:center;
 }
 .tieude {
   color:tomato;
